--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -11,6 +11,72 @@ main {
   padding: 1rem;
   margin-right: 10rem;
 }
+@media only screen and (max-width: 600px) {
+  .navbar {
+    bottom: 0;
+    width: 100vw;
+    height: 5rem;
+  }
+
+  .logo {
+    display: none;
+  }
+
+  .navbar-list {
+    flex-direction: row;
+    width: 100%;
+  }
+  .navbar-item:last-child {
+    margin-left: auto;
+  }
+
+  .nav-link {
+    justify-content: center;
+  }
+
+  main {
+    margin: 0;
+  }
+}
+
+/* Large screens */
+@media only screen and (min-width: 600px) {
+  .navbar {
+    width: 5rem;
+    height: 100vh;
+  }
+
+  .navbar:hover {
+    width: 16rem;
+  }
+
+  .navbar:hover .navbar-text {
+    display: block;
+  }
+
+  .navbar-item {
+    display: flex;
+    align-items: center;
+    height: 5rem;
+    width: 100%;
+  }
+  .navbar-item:last-child {
+    margin-top: auto;
+  }
+  .navbar-list {
+    flex-direction: column;
+  }
+
+  /* .navbar:hover .logo svg
+  {
+    margin-left: 11rem;
+  }
+
+  .navbar:hover .logo-text
+  {
+    left: 0px;
+  } */
+}
 .basic-slide {
   display: inline-block;
   /* width: min(215px, 100%); */
@@ -26,34 +92,33 @@ main {
   margin-right: 5px;
   /* text-indent: 70px;  */
 }
+.basic-slide:disabled {
+  /* background-color: #f8f8f8; */
+  background-color: #dfdfdf;
+  color: black;
+  font-weight: 800;
+}
 
 .navbar {
-  width: 5rem;
-  height: 100vh;
   position: fixed;
   background-color: var(--dark);
   transition: 200ms ease;
-}
-.navbar:hover {
-  width: 16rem;
 }
 .navbar-list {
   list-style: none;
   padding: 0;
   margin: 0;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  /* height: 100%;  */
+  height: 100%;
 }
-
 .navbar-text {
   display: none;
   margin-left: 1rem;
 }
-.navbar:hover .navbar-text {
+/* .navbar:hover .navbar-text {
   display: block;
-}
+} */
 
 .navbar-link {
   color: var(--light);
@@ -76,12 +141,6 @@ main {
   height: 5rem;
   background-color: #222;
 }
-.navbar-item {
-  display: flex;
-  align-items: center;
-  height: 5rem;
-  width: 100%;
-}
 
 .App {
   text-align: center;
@@ -92,6 +151,7 @@ main {
 }
 .grid-item {
   padding: 10px;
+  text-align: center;
 }
 .entry-row {
   transition: 200ms ease;
@@ -106,6 +166,11 @@ main {
 .no-border {
   border: none;
 }
+.entry-detailed {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
 h3 {
   color: var(--secondary);
 }
@@ -131,6 +196,9 @@ h4 {
   text-align: center;
   width: 50px;
   height: 50px;
+  position: fixed;
+  right: 50px;
+  bottom: 50px;
 }
 
 .submit-button {
@@ -150,6 +218,7 @@ h4 {
   padding-bottom: 10px;
   margin-top: 10px;
   font-weight: bold;
+  margin: auto;
 }
 .search-container {
   margin: 1rem;
@@ -193,17 +262,45 @@ label {
 }
 
 .center {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  display: table-cell;
+  vertical-align: middle;
+}
+.page:enabled {
+  background-color: Transparent;
+}
+.page:disabled {
+  background-color: var(--secondary);
+}
+.page {
+  border: none;
+  padding: 5px 10px;
+  border-radius: 10px;
+  color: black;
+}
+.dialog {
+  width: min(600px, 50%);
+  height: 60%;
+  overflow-y: auto;
+  border-radius: 10px;
+  border: none;
+}
+.dialog::-webkit-scrollbar,
+body::-webkit-scrollbar {
+  width: 0.5rem;
+  right: 10px;
+}
+.dialog::-webkit-scrollbar-track,
+body::-webkit-scrollbar-track {
+  background: #fff;
+  border-radius: 10px;
 }
 
-.dialog {
-  width: 40%;
-  height: 80%;
-  overflow-y: auto;
+.dialog::-webkit-scrollbar-thumb,
+body::-webkit-scrollbar-thumb {
+  background: var(--secondary);
+  border-radius: 10px;
 }
+
 .container {
   position: relative;
 }
@@ -214,11 +311,26 @@ label {
   margin-left: 1rem;
 }
 
+.dialog-overlay {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  padding: 50px 0;
+}
+
+.sticky {
+  position: sticky;
+}
+
 .topright {
   position: absolute;
   top: 8px;
-  right: 16px;
+  right: 8px;
   font-size: 18px;
+  color: var(--secondary);
 }
 
 img {
