--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -98,7 +98,50 @@ main {
   color: black;
   font-weight: 800;
 }
+.checkbox {
+  display: inline-flex;
+  cursor: pointer;
+  position: relative;
+}
 
+.checkbox > span {
+  color: #34495e;
+  padding: 0.5rem 0.25rem;
+}
+
+.checkbox > input {
+  height: 25px;
+  width: 25px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -o-appearance: none;
+  appearance: none;
+  border: 1px solid var(--dark);
+  border-radius: 4px;
+  outline: none;
+  transition-duration: 0.3s;
+  background-color: var(--secondary);
+}
+
+.checkbox > input:checked {
+  border: 1px solid var(--secondary);
+  background-color: var(--dark);
+}
+
+.checkbox > input:checked + span::before {
+  content: '\2713';
+  display: block;
+  text-align: center;
+  color: var(--secondary);
+  position: absolute;
+  left: 0.7rem;
+  top: 0.2rem;
+  font-size: 15px;
+}
+
+.checkbox > input:active {
+  border: 2px solid var(--dark);
+}
 .navbar {
   position: fixed;
   background-color: var(--dark);
@@ -112,6 +155,7 @@ main {
   align-items: center;
   height: 100%;
 }
+
 .navbar-text {
   display: none;
   margin-left: 1rem;
