--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -100,6 +100,10 @@ main {
   outline: 0;
   margin-bottom: 5px;
   margin-right: 5px;
+
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
   /* text-indent: 70px;  */
 }
 .basic-slide:disabled {
@@ -129,13 +133,11 @@ main {
   appearance: none;
   border: 1px solid var(--dark);
   border-radius: 4px;
-  outline: none;
-  transition-duration: 0.3s;
-  background-color: var(--secondary);
+  transition-duration: 0.2s;
+  /* background-color: var(--secondary); */
 }
 
 .checkbox > input:checked {
-  border: 1px solid var(--secondary);
   background-color: var(--dark);
 }
 
@@ -150,9 +152,6 @@ main {
   font-size: 15px;
 }
 
-.checkbox > input:active {
-  border: 2px solid var(--dark);
-}
 .navbar {
   position: fixed;
   background-color: var(--dark);
@@ -278,9 +277,9 @@ h4 {
   background: var(--secondary);
   padding-top: 10px;
   padding-bottom: 10px;
-  margin-top: 10px;
+  margin-top: 2rem;
   font-weight: bold;
-  margin: auto;
+  margin-bottom: 0;
 }
 .search-container {
   margin: 1rem;
@@ -342,7 +341,7 @@ label {
 
 .dialog {
   width: min(600px, 50%);
-  height: 60%;
+  max-height: 60%;
   overflow-y: auto;
   border-radius: 10px;
   border: none;
