--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -12,6 +12,7 @@ main {
   padding: 1rem;
   margin-right: 2%;
 }
+
 @media only screen and (max-width: 600px) {
   .navbar {
     bottom: 0;
@@ -160,6 +161,7 @@ main {
   position: fixed;
   background-color: var(--dark);
   transition: 200ms ease;
+  z-index: 1;
 }
 .navbar-list {
   list-style: none;
@@ -422,7 +424,7 @@ img {
 }
 
 .card-container {
-  width: 30rem;
+  width: 100%;
   height: 20rem;
   border-radius: 1rem;
   perspective: 200rem;
@@ -474,4 +476,19 @@ img {
     var(--light-secondary)
   );
   transform: rotateY(180deg);
+}
+
+.arrow-icon {
+  color: var(--secondary);
+  margin: 0.3rem;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card-width {
+  width: 30rem;
 }
